# can-json-gui-2.0

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: release.yml
json/: Cargo.toml  error.rs  mod.rs  parse.rs  schema.rs
packaging/: icon.rc
packaging/linux/: can-json-gui-two.desktop  can-json-gui.desktop
packaging/windows/: License.rtf  main.wxs
scripts/: instance_fonts.py  setup.sh
src/: main.rs  window.rs
src/backend/: mod.rs  recent.rs
src/frontend/: mod.rs  update.rs  window.rs
src/frontend/assets/: mod.rs
src/frontend/components/: cardlist.rs  edit_dialog.rs  file_dialog.rs  leftbar.rs  message_card.rs  mod.rs  scrollbar.rs  sidebar.rs
src/frontend/pages/: home.rs  mod.rs  other_page.rs
src/frontend/pages/editor/: mod.rs  render.rs
src/frontend/pages/editor/components/: cardlist.rs  message_card.rs  mod.rs  sidebar.rs
src/pages/: home.rs  other_page.rs
