[package]
name = "can-json-gui-two"
version = "0.1.0"
edition = "2024"
description = "A GPUI desktop application."
license = "MIT"
authors = ["Blake Jackson <blakejackson312006@gmail.com>, John Claude"]

[dependencies]
anyhow = "1.0.103"
dirs = "5"
gpui = { package = "gpui-ce", version = "0.3" }
json = { path = "json" }
rust-embed = "8"
thiserror = "2.0.18"
ureq = { version = "2", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
semver = "1"
chrono = "0.4.45"
directories = "6.0.0"
open = "5"
webbrowser = "1.2.1"

[build-dependencies]
embed-resource = "3"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"

[profile.release]
opt-level = 3       # max optimization (default for release; explicit for clarity)
lto = "thin"        # link-time optimization across crates
codegen-units = 1   # smaller, faster binary at the cost of slower compile
strip = "symbols"   # strip debug symbols from the binary; cuts size dramatically
panic = "abort"     # smaller binary, no unwinding cost; use only if you don't catch_unwind

[package.metadata.deb]
section = "graphics"
priority = "optional"
extended-description = "A desktop app for editing NER CAN JSON files."
assets = [
    ["target/release/can-json-gui-two", "usr/bin/", "755"],
    ["packaging/icon.svg", "usr/share/icons/hicolor/scalable/apps/can-json-gui-two.svg", "644"],
    ["packaging/linux/can-json-gui-two.desktop", "usr/share/applications/", "644"],
]

[package.metadata.bundle]
name = "can-json-gui-two"
identifier = "com.example.can-json-gui-two"
icon = ["icon.icns"]
category = "public.app-category.developer-tools"
short_description = "A desktop app for editing NER CAN JSON files."
long_description = "A desktop app for editing NER CAN JSON files."
copyright = "Copyright (c) 2026"

[workspace]
members = [
    "json"
]
