[package]
name = "json"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
serde_path_to_error = "0.1.20"
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
regex = "1.12.3"
schemars = "1.2.1"

[lib]
path = "mod.rs"